문구 변경: '퀴즈풀고 치매예방ㅠㅠ'

--- a/team/Frontend/deliverables/index.html
+++ b/team/Frontend/deliverables/index.html
@@ -234,7 +234,7 @@
 <body>
     <div class="container">
         <h1>🧮 수열 퀴즈</h1>
-        <p class="subtitle">중학교 3학년 수학 - 빈칸에 들어갈 숫자를 맞춰보세요!</p>
+        <p class="subtitle">퀴즈풀고 치매예방ㅠㅠ</p>
         
         <div class="sequence-container">
             <div class="sequence-grid" id="sequenceGrid">
